--- a/index.html
+++ b/index.html
@@ -1,12 +1,67 @@
 <html>
 <head>
-<title>Web Pertama</title>
+<title>web pertama</title>
 </head>
 <body>
-<h1>Web Pertama Saya</h1>
-<h1>Web Pertama Saya</h1>
-<h1>Web Pertama Saya</h1>
-<h1>Web Pertama BRAM</h1>
-<h4>Kelas X1-5</h4>
+ 
+<h1> Website Profil Siswa</h1>
+<hr style="width:200%;text-align:left;margin-left:0">
+
+ <table>
+    <tr>
+      <td>
+<img src="aku.jpg"="diriku"
+width="200" height="250">
+</td>
+
+<td style "padding-left 40px;">
+<h4>Nama:Dwiky Nursiam</h4>
+<h4>Kelas:XI-6</h4>
+<h4>Sekolah:SMAN 5 Cimahi</h4>
+<h4>Alamat:Cipageran,Cimahi</h4>
+</td>
+</tr>
+</table>
+
+<hr style="width:200%;text-align:left;margin-left:0">
+<h2>Profil singkat</h2>
+<h4>Saya adalah seorang Manusia Biasa</h4>
+<h2>Media sosial</h2>
+
+<hr style="width:200%;text-align:left;margin-left:0">
+
+<h4>Instagram: <a href="https://www.instagram.com/dwiky1259?igsh=dXp0emg0dGo3OWhr/"_blank">@dwiky1259</a>
+<h4>Youtube: <a href="https://youtube.com/@dwikylukman3442?si=0s7F-Cpafos4lx-e/"_blank">Dwiky Lukman</a>
+<hr style="width:200%;text-align:left;margin-left:0">
+<h2>Riwayat pendidikan</h2>
+ <table style="width:150%"border="1" cellpadding="8" cellspacing="0">
+  <tr> 
+  <th>No</th>
+  <th>Nama Sekolah</th>
+  <th>Tahun</th>
+  </tr>
+  <tr>
+    <th>1</th>
+    <th>SDIT Annur</th>
+    <th>2015-2020</th>
+  </tr>
+  
+  <tr>
+    <th>2</th>
+    <th>SMPIA AL Azhar 16 Cikarang</th>
+    <th>2020-2024</th>
+  </tr>
+   <tr>
+    <th>3</th>
+    <th>SMAN 5 Cimahi</th>
+    <th>2024-Sekarang</th>
+  </tr>
+</table>
+
+<p align="center">
+    © 2026 | Website Profil Siswa Dwiky XI-6 - Informatika
 </body>
+
 </html>
+
+
